# bdk-dart

./: .gitignore  .pubignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PUBDEV_RELEASE_CHECKLIST.md  README.md  SUPPORTED_TARGETS.md  justfile  pubspec.yaml  uniffi-bindgen.rs  uniffi.toml
.github/: dependabot.yml
.github/workflows/: bdk-ffi-release-watch.yml  ci.yml  precompile_binaries.yml  upstream-compat.yml
bdk_demo/: README.md  pubspec.yaml
bdk_demo/android/app/: build.gradle.kts
bdk_demo/lib/: main.dart
bdk_demo/lib/app/: app.dart  bootstrap.dart
bdk_demo/lib/core/constants/: app_constants.dart  bip39_wordlist.dart  network_endpoints.dart
bdk_demo/lib/core/logging/: app_logger.dart
bdk_demo/lib/core/router/: app_router.dart
bdk_demo/lib/core/theme/: app_colors.dart  (+1 more)
bdk_demo/lib/models/: currency_unit.dart  tx_details.dart  wallet_balance_snapshot.dart  wallet_record.dart
bdk_demo/lib/providers/: address_providers.dart  blockchain_providers.dart  connectivity_provider.dart  network_endpoint_providers.dart  router_provider.dart  send_providers.dart  settings_providers.dart  wallet_providers.dart
bdk_demo/lib/services/: blockchain_service.dart  fee_estimates_job.dart  storage_service.dart  wallet_network_mapper.dart  wallet_service.dart  wallet_sqlite_persistence.dart  wallet_sync_job.dart
bdk_demo/test/: README.md  widget_test.dart
bdk_demo/test/core/: network_endpoints_test.dart
bdk_demo/test/presentation/: active_wallets_page_test.dart  app_shell_test.dart  create_wallet_page_test.dart  home_page_test.dart  receive_page_test.dart  recover_wallet_page_test.dart  router_wiring_test.dart  send_page_test.dart
bdk_demo/test/providers/: active_wallet_notifier_test.dart  current_receive_address_provider_test.dart  sync_controller_test.dart
bdk_demo/test/services/: blockchain_service_test.dart  wallet_network_mapper_test.dart  wallet_service_test.dart  wallet_sync_job_test.dart
docs/: precompiled_binaries.md
docs/superpowers/plans/: 2026-06-15-receive-page.md  2026-06-30-bdk-demo-real-transaction-history.md
docs/superpowers/specs/: 2026-06-15-receive-page-design.md  2026-06-30-bdk-demo-real-transaction-history-design.md
example/: README.md  main.dart  pubspec.yaml
examples/: network_example.dart
hook/: build.dart
lib/: README.md  bdk.dart  bdk_dart.dart
lib/src/precompiled/: artifacts_provider.dart  cargo.dart  crate_hash.dart  precompiled_builder.dart  rust_toolchain.dart  target.dart  util.dart
native/: Cargo.toml  rust-toolchain.toml
scripts/: build-android.sh  build-ios-xcframework.sh  check_android_elf_alignment.dart  check_android_hook_alignment.dart  check_reproducibility.sh  generate_bindings.sh  inject_dartdocs.dart
scripts/dartdoc/: entries.yaml
test/: chain_position_converter_test.dart  dartdoc_injection_test.dart  descriptor_test.dart  keychains_lifecycle_smoke_test.dart  mnemonic_test.dart  offline_persistence_test.dart  offline_wallet_test.dart  request_inspector_callback_test.dart  test_constants.dart  wallet_behavior_test.dart  wallet_creation_sqlite_lifecycle_test.dart  wallet_creation_test.dart  wallet_keychains_test.dart  wallet_sequence_canary_test.dart
test/integration/: electrum_sync_test.dart  esplora_sync_test.dart  full_scan_smoke_test.dart  harness_smoke_test.dart  integration_helpers.dart  wallet_creation_test.dart  wallet_surface_canary_test.dart
test/precompiled/: cargo_test.dart  crate_hash_test.dart  options_test.dart
(+45 files in other folders)
