[package]
name = "bdk_dart_ffi"
description = "This is a simple wrapper crate which re-exports bdk-ffi for publishing to pub.dev"
version = "2.3.0-alpha.0"
homepage = "https://bitcoindevkit.org"
repository = "https://github.com/bitcoindevkit/bdk-dart"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["staticlib", "cdylib"]
name = "bdk_dart_ffi"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
bdk-ffi = { package = "bdk-ffi", git = "https://github.com/bitcoindevkit/bdk-ffi.git", rev = "6ed0930e3d8ced2ddfd49c6a7bc8a7dec203bb2c" }
uniffi = { version = "=0.30.0", features = ["cli"] }
uniffi-dart = { git = "https://github.com/Uniffi-Dart/uniffi-dart", rev = "5bdcc790c3fc99845e7b4a61d7a4f6e1460896e9" }
camino = "1.2"

[build-dependencies]
uniffi = { version = "=0.30.0", features = ["build"] }
uniffi-dart = { git = "https://github.com/Uniffi-Dart/uniffi-dart", rev = "5bdcc790c3fc99845e7b4a61d7a4f6e1460896e9", features = [
    "build",
] }
